# Changelog

# Alpha 010 (Unreleased)

* Hühner hinzugefügt
* Unterstützung für Rii USB Classic Controller hinzugefügt
* Änderungen an map02 durchgeführt
* Shader-Hintergründe im Menü geändert

# Alpha 009 (29.03.2024)

* Schwierigkeitsgrad Auswahl hinzugefügt
* Level-Auswahl hinzugefügt
* Intro-Video für map02 hinzugefügt
* Checkbox "Rahmenlos" zum Launcher hinzugefügt
* Musikwiedergabe auf Linux korrigiert
* Map-Ladedauer drastisch reduziert

# Alpha 008 (15.03.2024)

* Aufgabe mit Autoschlüssel hinzugefügt
* Intro Video für Level hinzugefügt
* Hammer und Sparschwein hinzugefügt
* Frettchen hinzugefügt
* Spielstand-System hinzugefügt
* Fadeout-Animationen hinzugefügt
* V-Sync Grafik-Option hinzugefügt
* Weitere Musiktracks hinzugefügt
* In-Game Grafikeinstellungen hinzugefügt
* Menüs können jetzt mit Controller bedient werden
* Launcher UI verbessert
* Controller Support ist nun immer aktiviert
* Bugfix: Man kann ein Item nicht mehr auf einer Mauer ablegen
* Bugfix: Absturz im Launcher behoben

## Alpha 007 (08.03.2024)

* Inventar hinzugefügt
* Launcher hinzugefügt
* Map erweitert
* Atmosphären-Sound hinzugefügt
* Support für XBox 360 Controller hinzugefügt
* KI der Totenköpfe verbessert
* Performance der Screenshot-Funktion verbessert

## Alpha 006 (01.03.2024)

* Komplette Neuentwicklung auf anderer technologischer Basis
* TMX-Tilemap
* Sammelbare Münzen
* Verschiebbare Kisten
* Totenköpfe als Gegner
* Pymunk Physik-Engine
* Man kann schießen
* Automatische Selbstheilung

## Alpha 005

* Nicht veröffentlicht

## Alpha 004 (17.01.2024)

* Aufgabe mit Sprengstoff hinzugefügt
* Tretminen hinzugefügt
* Schwert hinzugefügt
* Tag-Nacht-Zyklus hinzugefügt
* Aktuelle Aufgabe wird jetzt angezeigt im Pausenmenü
* Grafik-Einstellungen feiner einstellbar
* Intro entfernt
* Maussteuerung entfernt
* Fehler im Handling der Tastatur-Events korrigiert
* Wenn man das Spiel pausiert, werden jetzt auch die Soundeffekte gestoppt

## Alpha 003 (09.01.2024)

* Intro