@@ -5,7 +5,6 @@ import utils.gui
 import utils.text
 from utils.gui import get_texture_by_value
 from views.fading import Fading
-from views.settings.settingscontrols import SettingsControls
 
 BUTTON_WIDTH = 250
 
@@ -47,9 +46,8 @@ class SettingsVideo(Fading):
         self.manager.clear()
         self.manager.disable()
 
-        # Control settings
-        controls_button = arcade.gui.UIFlatButton(
-            text=_("Controls"),
+        back_button = arcade.gui.UIFlatButton(
+            text=_("Back"),
             width=BUTTON_WIDTH,
             style=utils.gui.get_button_style()
         )
@@ -60,7 +58,7 @@ class SettingsVideo(Fading):
             width=BUTTON_WIDTH,
             texture=get_texture_by_value(
                 width=BUTTON_WIDTH,
-                height=controls_button.height,
+                height=back_button.height,
                 value=self.window.fullscreen
             ),
             style=utils.gui.get_button_style()
@@ -72,7 +70,7 @@ class SettingsVideo(Fading):
             width=BUTTON_WIDTH,
             texture=get_texture_by_value(
                 width=BUTTON_WIDTH,
-                height=controls_button.height,
+                height=back_button.height,
                 value=self.window.vsync
             ),
             style=utils.gui.get_button_style()
@@ -84,26 +82,11 @@ class SettingsVideo(Fading):
             width=BUTTON_WIDTH,
             texture=get_texture_by_value(
                 width=BUTTON_WIDTH,
-                height=controls_button.height,
+                height=back_button.height,
                 value=self.state.settings.show_fps
             ),
             style=utils.gui.get_button_style()
         )
-
-        back_button = arcade.gui.UIFlatButton(
-            text=_("Back"),
-            width=BUTTON_WIDTH,
-            style=utils.gui.get_button_style()
-        )
-
-        @controls_button.event("on_click")
-        def on_click_controls_button(event):
-            from views.settings.settingsmenu import SettingsMenu
-            comeback_view = SettingsMenu(self.window, self.state, self.previous_view, self.shadertoy, 0)
-
-            # Pass already created view because we are resuming.
-            self.next_view = SettingsControls(self.window, self.state, comeback_view)
-            self.fade_out()
 
         @fullscreen_button.event('on_click')
         def on_click_fullscreen_button(event):
@@ -140,10 +123,6 @@ class SettingsVideo(Fading):
         widgets += [
             vsync_button,
             fps_button
-        ]
-
-        widgets += [
-            controls_button
         ]
 
         # Initialise a BoxLayout in which widgets can be arranged.
